<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CaloriesCalculateActivity">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/calories_calculator"
        android:textColor="#211D1D"

        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/weight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:inputType="number"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="Autofill,DuplicateClickableBoundsCheck,MissingConstraints,RtlSymmetry,TextContrastCheck"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView176"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/height"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/height_in_cm"
        android:inputType="number"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView176"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/age"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/your_age"
        android:inputType="number"
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:ignore="Autofill,MissingConstraints,RtlSymmetry,TextContrastCheck"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/your_activities"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/activ10"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="332dp"
        android:gravity="center"
        android:text="@string/daily_calories"
        android:textColor="#4DC853"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/calculbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/calculate"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resultat"
        android:layout_width="336dp"
        android:layout_height="63dp"
        android:layout_marginTop="500dp"
        android:textSize="22sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:onClick="continu"
        android:text="@string/continues"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>