<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.signup">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/texte"
        android:textColor="#211D1D"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="151dp"
        android:layout_height="25sp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="151dp"
        android:layout_height="25dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/_10_numbers"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        tools:ignore="Autofill,LabelFor,MissingConstraints,RtlSymmetry,SpeakableTextPresentCheck,TextFields,TextContrastCheck" />

    <TextView
        android:layout_width="151dp"
        android:layout_height="25dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:ems="10"
        android:hint="@string/_8_to_12_character"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608"
        tools:ignore="Autofill,LabelFor,MissingConstraints,RtlSymmetry,SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/buttondone"
        android:layout_width="374dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:text="@string/done"
        android:textSize="20sp"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79"
        tools:ignore="MissingConstraints,TextContrastCheck,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/already_a_member"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:onClick="signin"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>