<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.welcome">

    <Button
        android:id="@+id/button10000"
        android:layout_width="210dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:onClick="start"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="82dp"
        android:fontFamily="@font/palanquin_dark"
        android:gravity="center"
        android:text="@string/gastronom_mix"
        android:textColor="#65C02D"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="243dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"
        app:srcCompat="@drawable/pic"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/already_a_member"
        android:textColor="#999999"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView204"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:onClick="signin"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="82dp"
        android:fontFamily="@font/palanquin_dark"
        android:gravity="center"
        android:text="@string/food"
        android:textColor="#65C02D"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="TextContrastCheck,TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>